brand,product are updated
